Fix the overflow when the haiku was too long

--- a/static/style.css
+++ b/static/style.css
@@ -162,6 +162,6 @@ body {
   .masthead,
   .mastfoot,
   .cover-container {
-    width: 700px;
+    width: 810px;
   }
 }
